opam-version: "2.0"
name: "coq-ssprove"
version: "dev"
synopsis: "A Foundational Framework for Modular Cryptographic Proofs"
maintainer: "philipp@haselwarter.org"
authors: ["SSProve team"]
homepage: "https://github.com/SSProve/ssprove"
bug-reports: "https://github.com/SSProve/ssprove/issues"
dev-repo: "git+https://github.com/SSProve/ssprove.git"
doc: "https://SSProve.github.io/ssprove/index.html"
license: "MIT"
depends: [
  "coq" {(>= "8.18~")}
  "coq-equations" {(>= "1.3+8.18")}
  "coq-mathcomp-ssreflect" {(>= "2.1.0")}
  ("coq-mathcomp-analysis" {>= "1.0.0" & < "1.7.0"} | "coq-mathcomp-analysis" {>= "1.7.0"} & "coq-mathcomp-experimental-reals" {>= "1.7.0"})
  "coq-mathcomp-word" {>= "3.2" & < "3.3"}
  "coq-extructures" {(>= "0.4.0" & < "dev")}
  "coq-deriving" {(>= "0.2.0" & < "dev")}
]
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
tags: [
  "keyword:cryptography"
  "logpath:SSProve"
]
