opam-version: "2.0"
name: "rocq-ssprove"
version: "dev"
synopsis: "A Foundational Framework for Modular Cryptographic Proofs"
maintainer: "philipp@haselwarter.org"
authors: ["SSProve team"]
homepage: "https://github.com/SSProve/ssprove"
bug-reports: "https://github.com/SSProve/ssprove/issues"
dev-repo: "git+https://github.com/SSProve/ssprove.git"
doc: "https://SSProve.github.io/ssprove/index.html"
license: "MIT"
depends: [
  "rocq-core" {>= "9.0" & < "9.2~"}
  "rocq-stdlib" {>= "9.0" & < "9.2~"}
  "rocq-equations" {(>= "1.3.1+9.0")}
  "coq-mathcomp-ssreflect" {(>= "2.3.0")}
  "coq-mathcomp-analysis" {>= "1.8.0"}
  "coq-mathcomp-experimental-reals" {>= "1.8.0"}
  "coq-mathcomp-word" {>= "3.3" & < "3.5"}
  "coq-extructures" {(>= "0.5.0" & < "dev")}
  "coq-deriving" {(>= "0.2.1" & < "dev")}
]
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
tags: [
  "keyword:cryptography"
  "logpath:SSProve"
]
