opam-version: "2.0"
name: "ssprove"
version: "dev"
synopsis: "A Foundational Framework for Modular Cryptographic Proofs"
maintainer: "philipp@haselwarter.org"
authors: ["SSProve team"]
homepage: "https://github.com/SSProve/ssprove"
bug-reports: "https://github.com/SSProve/ssprove/issues"
license: "MIT"
depends: [
  "coq" {(>= "8.14" & < "8.15~")}
  "coq-equations" {>= "1.3"}
  "coq-mathcomp-ssreflect" {(>= "1.13.0" & < "1.17~")}
  "coq-mathcomp-analysis" {>= "0.3.13" & <= "0.6.1"}
  "coq-extructures" {(>= "0.3.1" & < "dev")}
  "coq-deriving" {(>= "0.1" & < "dev")}
]
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
