opam-version: "2.0"
name: "ssprove"
version: "dev"
synopsis: "A Foundational Framework for Modular Cryptographic Proofs"
maintainer: "philipp@haselwarter.org"
authors: ["SSProve team"]
homepage: "https://github.com/SSProve/ssprove"
bug-reports: "https://github.com/SSProve/ssprove/issues"
license: "MIT"
depends: [
  "coq" {>= "8.18"}
  "coq-equations" {>= "1.3+8.18"}
  "coq-mathcomp-ssreflect" {(>= "2.1.0")}
  "coq-mathcomp-analysis" {= "1.0.0"}
  "coq-mathcomp-word" {>= "3.0" & < "3.2"}
  "coq-extructures" {(>= "0.4.0" & < "dev")}
  "coq-deriving" {(>= "0.2.0" & < "dev")}
  "coq-mathcomp-zify" {>= "1.5.0+2.0+8.16"}
]
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
