(coq.theory
  (name SSProve)
  (package coq-ssprove)
  (synopsis "A Foundational Framework for Modular Cryptographic Proofs")
  (modules :standard \
    Crypt.examples.OVN
    Crypt.rules.UniformDistr
    Crypt.rhl_semantics.state_prob.LiftStateful
    )
  (flags
    -w -deprecated-from-Coq
    -w -deprecated-dirpath-Coq
    -w -deprecated-since-mathcomp-2.3.0
    -w -deprecated-since-mathcomp-2.4.0
    -w -redundant-canonical-projection
    -w -projection-no-head-constant
    -w -HB.no-new-instance
    ))

(include_subdirs qualified)
